# TIAGoPro_Group_Project_163

./: .gitignore  README.md  docker-compose.yml  requirements.txt  restart.sh  run_experiments.sh  start.sh
FaceDetection/: faceCounting.py
FaceRecognition/: faceRecognition.py
Paper/: navigation_stack_summary.md
VLM/: env  smolVLM.py
docker/: Dockerfile  entrypoint.sh
paper/: report_figures.tex
pythonScripts/ObjectDetection/: YOLO.py  objectDetection.py
pythonScripts/VLM/: MistralVLM.py
pythonScripts/XAI/: XAI_Example.py  XAI_LIME.py
python_scripts/object_detection/: YOLO_Video.py  objectDetection2.py
python_scripts/presentation/: README.md  mann_whitney_results.txt  task1_psc_violin.py  task2_collision_heatmap.py  task3_velocity_accuracy.py  task4_tracking_performance.py  task5_vlm_metrics_bar.py  task6_vlm_actions_stacked.py  task7_energy_collision.py  task8_mann_whitney_test.py
python_scripts/rosbag_analysis/: evaluate_explanations.py  extract_metrics.py  extract_vlm_samples.py  fix_label_duplication.py  label_samples.py  metrics_types.py  plot_metrics.py  run_extraction.py  summarize_vlm_metrics.py  update_appropriateness.py  vlm_metrics_summary.csv  vlm_samples copy 2.json  vlm_samples copy.json
python_scripts/vlm/: smolVLM2.py
python_scripts/voice_assistant/: voiceAssistant.py
python_scripts/xai/: XAI_Example2.py
src/: run_experiments.sh  rvizConfig.rviz
src/human_spawner/: package.xml  setup.cfg  setup.py
src/object-detection/: objectDetection.py  objectDetection2.py
src/tiago_social_cmd/: package.xml  setup.cfg  setup.py
src/tiago_social_nav/: README.md  package.xml  setup.cfg  setup.py
src/tiago_social_sim/: CMakeLists.txt  package.xml
src/tiago_social_sim/behavior_trees/: DEFAULT_REFERENCE_navigate_to_pose.xml  custom_navigate_to_pose.xml
src/tiago_social_sim/launch/: simulation.launch.py
src/tiago_social_sim/pal_config/: 99_user_bt_navigator.yaml  99_user_costmap.yaml  99_user_laser.yaml  README.md
src/tiago_social_vlm/: package.xml  setup.cfg  setup.py
(+32 files in other folders)
